[package]
name = "exe_test"
version = "0.1.0"
authors = ["rachel-rose <ihateface@autistici.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.0"
async-channel = "1.4.2"
futures-lite = "1.11.2"
async-dup = "1.2.2"
smol = "1.2.4"
ctrlc = "3.1.6"
itertools = "0.8.2"
rand_core = "0.5.1"
rand = "0.7.2"
sha2 = "0.8.1"
bls12_381 = { version = "0.1.1" }
serde = { version = "1.0.104", features = ["derive"] }
hex = "0.4.2"
log = "0.4"
num_cpus = "1.0"
num_enum = "0.5.0"
simplelog = "0.7.4"
async-std = "1.6.2"
aes-gcm = "0.6.0"
bs58 = "0.3.1"
clap = "2.33.0"
rusqlite = "0.24.1"
core-error = "0.0.0"
easy-parallel = "3.1.0"

[dev-dependencies]
#clap = "3.0.0-beta.1"
dirs = "2.0.2"
failure = "0.1.8"
failure_derive = "0.1.8"
toml = "0.5.6"
serde_derive = "1.0.111"    

[[bin]]
name = "test"
path = "src/test.rs"



      
